@@ -1,5 +1,9 @@
 ﻿namespace FatturaElettronica.Tabelle
 {
+    /// <summary>
+    /// Attualmente non usata in convalida, vedo:
+    /// https://github.com/FatturaElettronica/FatturaElettronica.NET/issues/129
+    /// /// </summary>
     public class Provincia : Tabella
     {
         public override Tabella[] List
